Resolved the issues rlated to verify hyper links

--- a/test-output/old/Suite1/classes.html
+++ b/test-output/old/Suite1/classes.html
@@ -168,7 +168,12 @@
 </tr>
 <tr>
 <td>&nbsp;</td>
-<td>tc01ManageSettings</td>
+<td>tc01ManageLinks1</td>
+<td>Regression Smoke </td>
+</tr>
+<tr>
+<td>&nbsp;</td>
+<td>tc02ManageLinks2</td>
 <td>Regression Smoke </td>
 </tr>
 <tr>
@@ -190,7 +195,7 @@
 </tr>
 <tr>
 <td>&nbsp;</td>
-<td>tc04SetDrivertoHome</td>
+<td>tc03SetDrivertoHome</td>
 <td>Regression Smoke </td>
 </tr>
 </table>
