--- a/test-output/old/Suite1/reporter-output.html
+++ b/test-output/old/Suite1/reporter-output.html
@@ -2,21 +2,21 @@
 <tr><td>User name text box displayed  - PASS</td></tr>
 <tr><td>Sign up Button Displayed - PASS</td></tr>
 <tr><td>Validate SignUp button - PASS</td></tr>
-<tr><td>New User Activation PASS</td></tr>
 <tr><td>Login Completed Successfully - PASS</td></tr>
-<tr><td>Account Settings Navigation link - PASS</td></tr>
-<tr><td>Signed up user logged in status PASS</td></tr>
-<tr><td>Tax Receipts Navigation link - PASS</td></tr>
-<tr><td>Giving Tools Navigation link - PASS</td></tr>
 <tr><td>Dwarf Rabbit Disaster Recovery Navigation link - PASS</td></tr>
+<tr><td>New User Activation PASS</td></tr>
 <tr><td>Piggy Rescue Navigation link - PASS</td></tr>
+<tr><td>Signed up user logged in status PASS</td></tr>
 <tr><td>Bunny Buddies Navigation link - PASS</td></tr>
 <tr><td>Pot-bellied Pals Navigation link - PASS</td></tr>
-<tr><td>Flop-ear Families Navigation link - PASS</td></tr>
-<tr><td>Animal Action Navigation link - PASS</td></tr>
-<tr><td>Athiest Alms Navigation link - PASS</td></tr>
-<tr><td>Food Banks of BC Navigation link - PASS</td></tr>
-<tr><td>Clean Water for all Navigation link - PASS</td></tr>
-<tr><td>Justice for the poor Navigation link - PASS</td></tr>
+<tr><td>Flop-ear Families Navigation link - FAILED</td></tr>
+<tr><td>Animal Action Navigation link - FAILED</td></tr>
+<tr><td>Athiest Alms Navigation link - FAILED</td></tr>
+<tr><td>Food Banks of BC Navigation link - FAILED</td></tr>
+<tr><td>Clean Water for all Navigation link - FAILED</td></tr>
+<tr><td>Justice for the poor Navigation link - FAILED</td></tr>
+<tr><td>Account Settings Navigation link - PASS</td></tr>
+<tr><td>Tax Receipts Navigation link - PASS</td></tr>
+<tr><td>Giving Tools Navigation link - PASS</td></tr>
 <tr><td>Logout Completed Successfully - PASS</td></tr>
 </table>
