--- a/test-output/old/Suite1/toc.html
+++ b/test-output/old/Suite1/toc.html
@@ -8,9 +8,9 @@
 <h3><p align="center">Results for<br/><em>Suite1</em></p></h3>
 <table border='1' width='100%'>
 <tr valign='top'>
-<td>2 tests</td>
+<td>3 tests</td>
 <td><a target='mainFrame' href='classes.html'>5 classes</a></td>
-<td>12 methods:<br/>
+<td>13 methods:<br/>
 &nbsp;&nbsp;<a target='mainFrame' href='methods.html'>chronological</a><br/>
 &nbsp;&nbsp;<a target='mainFrame' href='methods-alphabetical.html'>alphabetical</a><br/>
 &nbsp;&nbsp;<a target='mainFrame' href='methods-not-run.html'>not run (9)</a></td>
@@ -20,6 +20,14 @@
 <td><a target='mainFrame' href='reporter-output.html'>reporter output</a></td>
 <td><a target='mainFrame' href='testng.xml.html'>testng.xml</a></td>
 </tr></table>
+<table width='100%' class='test-failed'>
+<tr><td>
+<table style='width: 100%'><tr><td valign='top'>ChimpUISmokeTestSuiteSendMail (0/0/0)</td><td valign='top' align='right'>
+  <a href='ChimpUISmokeTestSuiteSendMail.html' target='mainFrame'>Results</a>
+</td></tr></table>
+</td></tr><p/>
+</table>
+
 <table width='100%' class='test-passed'>
 <tr><td>
 <table style='width: 100%'><tr><td valign='top'>ChimpUISmokeTestSuiteOne (19/0/0)</td><td valign='top' align='right'>
